--- a/dashboard_module/Interface-web/app/templates/index.html
+++ b/dashboard_module/Interface-web/app/templates/index.html
@@ -15,10 +15,10 @@
             <img src="{{ url_for('static', filename='images/logo.png') }}" alt="logo" width="300" height="300"
                 class="mx-3">
             <p class="text-white">
-                Bienvenue sur TicketGo ! <br>
-                Le site qui vous permet de réserver vos tickets en ligne !
+                Welcome to TicketGo ! <br>
+                The best place to buy your tickets.
             </p>
-            <a href="{{url_for('acheter_ticket')}}" class="main-btn btn">Acheter un ticket</a>
+            <a href="{{url_for('acheter_ticket')}}" class="main-btn btn">Buy Ticket</a>
         </main>
     </div>
 </div>
