--- a/dashboard_module/Interface-web/app/templates/login.html
+++ b/dashboard_module/Interface-web/app/templates/login.html
@@ -3,18 +3,14 @@
 
 {% block page_body %}
 
-<div class="row">
-  <div class="col-md-8 d-none d-md-block mt-5 p-3">
-    <img src="{{ url_for('static', filename='images/undraw_sign_in_re_o58h.svg')}}" class="img-fluid d-none d-md-block" alt="sign-in">
-  </div>
+<div class="g-6 d-flex justify-content-center align-items-center">
   <div class="col-md-4">
     <main class="form-signin w-100 m-auto mt-5 p-3">
-      <form action="{{ url_for('simplelogin.login') }}" method="post">
+      <form action="" method="post">
+        {{ csrf_token }}
         <div class="text-center mb-4">
-        <img class="mb-4" src="{{ url_for('static', filename='images/icon.png') }}"  height="60" alt="logo">
+        <img class="mb-4" src="{{ url_for('static', filename='images/logo.png') }}"  height="100" alt="logo">
         <h1 class="h3 mb-3 fw-normal text-light">Connexion</h1>
-        </div>
-        {{ form.csrf_token }}
         <div class="form-floating">
           <input type="text" name="username" class="form-control" required>
           <label for="username">Nom d'utilisateur</label>
