--- a/dashboard_module/Interface-web/app/templates/login.html
+++ b/dashboard_module/Interface-web/app/templates/login.html
@@ -6,7 +6,7 @@
 <div class="g-6 d-flex justify-content-center align-items-center">
   <div class="col-md-4">
     <main class="form-signin w-100 m-auto mt-5 p-3">
-      <form action="" method="post">
+      <form action="{{ url_for('login') }}" method="POST">
         {{ csrf_token }}
         <div class="text-center mb-4">
         <img class="mb-4" src="{{ url_for('static', filename='images/logo.png') }}"  height="100" alt="logo">
