--- a/dashboard_module/Interface-web/app/templates/acheter_ticket.html
+++ b/dashboard_module/Interface-web/app/templates/acheter_ticket.html
@@ -9,25 +9,10 @@
     <div class="col-md-7 col-lg-8">
         <form class="needs-validation" novalidate>
             <div class="row g-3 text-white">
-                <div class="col-sm-6">
-                    <label for="firstName" class="form-label">First name</label>
-                    <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-                    <div class="invalid-feedback">
-                        Un prénom valide est requis.
-                    </div>
-                </div>
 
                 <div class="col-sm-6">
-                    <label for="lastName" class="form-label">Last name</label>
-                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-                    <div class="invalid-feedback">
-                        Un nom valide est requis.
-                    </div>
-                </div>
-
-                <div class="col-sm-6">
-                    <label for="type" class="form-label">Type of ticket</label>
-                    <select class="form-select" aria-label="Default select example">
+                    <label for="type" class="form-label">ticket</label>
+                    <select class="form-select" name="name">
                         <option selected>Choose a type of ticket</option>
                         <option value="1">Normal ticket</option>
                         <option value="2">Student ticket</option>
@@ -39,23 +24,16 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <label for="duree" class="form-label">Duration of ticket</label>
-                    <select class="form-select" aria-label="Default select example">
+                    <label for="duree" class="form-label">Type of ticket</label>
+                    <select class="form-select"name="ticket_type">
                         <option selected>Choose a duration of ticket</option>
-                        <option value="1">1 h</option>
-                        <option value="2">1 day</option>
-                        <option value="3">1 week</option>
+                        <option value="1H">1 h</option>
+                        <option value="2H">2 h</option>
+                        <option value="1J">1 day</option>
+                        <option value="1M">1 month</option>
                     </select>
                     <div class="invalid-feedback">
                         Un type valide est requis.
-                    </div>
-                </div>
-
-                <div class="col-sm-6">
-                    <label for="nombre" class="form-label">Number of ticket</label>
-                    <input type="number" class="form-control" id="lastName" placeholder="" value="" required>
-                    <div class="invalid-feedback">
-                        Un nombre valide est requis.
                     </div>
                 </div>
                 <div class="d-flex justify-content-end">
