--- a/dashboard_module/Interface-web/app/templates/administrator.html
+++ b/dashboard_module/Interface-web/app/templates/administrator.html
@@ -13,6 +13,9 @@
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">Username</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">First name</th>
+                    <th scope="col">Last name</th>
                     <th scope="col">Role</th>
                     <th></th>
                     <th></th>
@@ -22,24 +25,27 @@
                 {% for user_data in users %}
                 <tr>
                     <td>{{ user_data.username }}</td>
+                    <td>{{ user_data.email }}</td>
+                    <td>{{ user_data.first_name }}</td>
+                    <td>{{ user_data.last_name }}</td>
                     <td>{{ user_data.role }}</td>
                     <td>
-                    {% if user_data.username != get_username() %}
+                        {% if user_data.username != get_username() %}
                         {% if user_data.role == 'admin' %}
-                        <a href="{{ url_for('update_role', username=user_data.username, action='user') }}">
-                            <button class="btn btn-secondary" type="button">Downgrade</button>
+                        <a href="{{ url_for('deactivate_user', user_id=user_data.id) }}">
+                            <button class="btn btn-secondary" type="button">activate</button>
                         </a>
                         {% else %}
 
-                        <a href="{{ url_for('update_role', username=user_data.username, action='admin') }}">
-                            <button class="btn btn-success" type="button">Upgrade</button>
+                        <a href="{{ url_for('deactivate_user', user_id=user_data.id) }}">
+                            <button class="btn btn-success" type="button">disable</button>
                         </a>
                         {% endif %}
-                    {% endif %}
+                        {% endif %}
                     </td>
                     <td>
                         {% if user_data.username != get_username() %}
-                        <a href="{{ url_for('delete_user', username=user_data.username) }}">
+                        <a href="{{ url_for('delete_user', user_id=user_data.id) }}">
                             <button class="btn btn-danger" type="button">Delete</button>
                         </a>
                         {% endif %}
