--- a/dashboard_module/Interface-web/app/templates/login.html
+++ b/dashboard_module/Interface-web/app/templates/login.html
@@ -10,20 +10,20 @@
         {{ csrf_token }}
         <div class="text-center mb-4">
         <img class="mb-4" src="{{ url_for('static', filename='images/logo.png') }}"  height="100" alt="logo">
-        <h1 class="h3 mb-3 fw-normal text-light">Connexion</h1>
+        <h1 class="h3 mb-3 fw-normal text-light">Login</h1>
         <div class="form-floating">
-          <input type="text" name="username" class="form-control" required>
-          <label for="username">Nom d'utilisateur</label>
+          <input type="email" name="email" class="form-control" required>
+          <label for="email">Email</label>
         </div>
         &nbsp;
         <div class="form-floating">
           <input type="password" name="password" class="form-control" required>
-          <label for="password">Mot de passe</label>
+          <label for="password">Password</label>
         </div>
         <div class="form-check text-start my-3">
           <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
           <label class="form-check-label text-white" for="flexCheckDefault">
-            Se souvenir de moi
+            Remember me
           </label>
         </div>
         {% if next %}<input type="hidden" name="next" value="{{next}}">{% endif %}
