--- a/dashboard_module/Interface-web/app/templates/acheter_ticket.html
+++ b/dashboard_module/Interface-web/app/templates/acheter_ticket.html
@@ -7,7 +7,7 @@
 
 <div class="row g-6 justify-content-center border rounded-3 shadow-lg p-4 mx-5 mb-5">
     <div class="col-md-7 col-lg-8">
-        <form class="needs-validation" novalidate>
+        <form class="needs-validation" action="{{ url_for('add_ticket') }}" method="post" novalidate>
             <div class="row g-3 text-white">
 
                 <div class="col-sm-6">
