--- a/dashboard_module/Interface-web/app/templates/base.html
+++ b/dashboard_module/Interface-web/app/templates/base.html
@@ -24,9 +24,9 @@
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0" id="header">
           <li><a href="/" class="nav-link px-2 text-secondary">Home</a></li>
+          {% if current_user.is_authenticated %}
           <li><a href="{{url_for('acheter_ticket')}}" class="nav-link px-2 text-secondary">Buy Ticket</a></li>
 
-          {% if current_user.is_authenticated %}
           <li>
             <a href="{{url_for('acheter_abonnement')}}" class="nav-link px-2 text-secondary">Take out a subscription</a>
           </li>
@@ -66,6 +66,8 @@
   {% endblock %}
 
 
+
+
   <div class="col-12 main-banner ">
     <video autoplay muted loop id="bg-video">
       <source src="{{ url_for('static', filename='images/bg-video.mp4') }}" type="video/mp4" />
@@ -75,6 +77,22 @@
       <br>
       <br>
       <div class="col-12 mt-5 overflow-auto" style="height: 80vh;">
+        {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          {% for message in messages %}
+          <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+    {% endif %}
+    {% endwith %}
         {% block page_body %}
 
 
