--- a/dashboard_module/Interface-web/app/templates/index.html
+++ b/dashboard_module/Interface-web/app/templates/index.html
@@ -18,7 +18,7 @@
                 Welcome to TicketGo ! <br>
                 The best place to buy your tickets.
             </p>
-            {% if current_user.is_authenticated %}
+            {% if 'user_id' in session %}
             <a href="{{url_for('acheter_ticket')}}" class="main-btn btn">Buy Ticket</a>
             {% else %}
             <a href="{{url_for('login')}}" class="main-btn btn">Log in</a>
