--- a/dashboard_module/Interface-web/app/templates/profil.html
+++ b/dashboard_module/Interface-web/app/templates/profil.html
@@ -25,50 +25,32 @@
                             <i class="bi bi-person-circle"></i>
                         </div>
                         <hr class="border-light m-0">
-                        <div class="card-body">
-                            <div class="form-group">
-                                <label class="form-label">Username</label>
-                                <input type="text" class="form-control mb-1" value="">
-                            </div>
-                            <div class="form-group">
-                                <label class="form-label">Name</label>
-                                <input type="text" class="form-control" value="">
-                            </div>
-                            <div class="form-group">
-                                <label class="form-label">E-mail</label>
-                                <input type="text" class="form-control mb-1" value="">
-
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="tab-pane fade" id="account-change-password">
-                        <div class="card-body pb-2">
-                            <div class="form-group">
-                                <label class="form-label">Current password</label>
-                                <input type="password" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label class="form-label">New password</label>
-                                <input type="password" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label class="form-label">Repeat new password</label>
-                                <input type="password" class="form-control">
-                            </div>
-                        </div>
-                    </div>
+                        
                     <h4> Mes tickets</h4>
-                    {% for ticket in tickets %}
-                        <div>
-                            <p> {{ ticket.name }} </p>
-                            <p> {{ ticket.ticket_type }} </p>
-                            <p> date d'expiration : {{ ticket.expiration_date }} </p>
-                        </div>
-
-                    <div class="text-left mt-3 mb-3 ml-4">
-                        <button type="button" class="main-btn btn">Save changes</button>&nbsp;
+                    <table class="table table-dark">
+                        <thead class="thead-dark">
+                        <tr>
+                            <th> Nom </th>
+                            <th> Type </th>
+                            <th> Date d'achat</th>
+                            <th> Date d'expiration </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for ticket in tickets %}
+                        <tr class="text-white">
+                            <td> {{ ticket.name }} </td>
+                            <td> {{ ticket.type }} </td>
+                            <td> {{ ticket.created_at }} </td>
+                            <td> {{ ticket.expires_at }} </td>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                    <div>
+                        {{ tickets }}
                     </div>
+
                 </div>
             </div>
         </div>
