--- a/dashboard_module/Interface-web/app/templates/acheter_ticket.html
+++ b/dashboard_module/Interface-web/app/templates/acheter_ticket.html
@@ -14,9 +14,10 @@
                     <label for="type" class="form-label">ticket</label>
                     <select class="form-select" name="name">
                         <option selected>Choose a type of ticket</option>
-                        <option value="1">Normal ticket</option>
-                        <option value="2">Student ticket</option>
-                        <option value="3">Child ticket</option>
+                        <option value="C">Child ticket</option>
+                        <option value="S">Student ticket</option>
+                        <option value="A">Adult ticket</option>
+                        <option value="S">Senior ticket</option>
                     </select>
                     <div class="invalid-feedback">
                         Un type valide est requis.
@@ -31,6 +32,8 @@
                         <option value="2H">2 h</option>
                         <option value="1J">1 day</option>
                         <option value="1M">1 month</option>
+                        <option value="6M">6 months</option>
+                        <option value="1Y">1 year</option>
                     </select>
                     <div class="invalid-feedback">
                         Un type valide est requis.
